MyApplication_Check_Locally/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    name: myapp
    tier: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-db
  labels:
    name: myapp-db
    tier: database
